--- a/ImageTweeter/ImageTweeter/ImageTweeter.csproj
+++ b/ImageTweeter/ImageTweeter/ImageTweeter.csproj
@@ -6,6 +6,7 @@
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="1.0.4" />    
     <PackageReference Include="Microsoft.WindowsAzure.ConfigurationManager" Version="3.2.3" />    
     <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />    
+    <PackageReference Include="System.Runtime.Serialization.Primitives" Version="4.1.1" />    
     <PackageReference Include="TweetinviAPI" Version="2.0.0" />    
     <PackageReference Include="WindowsAzure.Storage" Version="8.4.0" />
   </ItemGroup>
